Add some DOIs (automatically found by jabref)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -52,9 +52,10 @@
 
 @InProceedings{IgelStaGue2016SAGEEP,
   author    = {Igel, J. and Stadler, S. and Günther, T.},
-  title     = {{H}igh-resolution investigation of the capillary transition zone and its influence on {GPR} signatures},
   booktitle = {Ext. Abstr., SAGEEP, Denver, USA},
+  title     = {{H}igh-resolution investigation of the capillary transition zone and its influence on {GPR} signatures},
   year      = {2016},
+  doi       = {10.1109/icgpr.2016.7572603},
   owner     = {TG},
   timestamp = {2016.06.28},
 }
@@ -265,99 +266,108 @@
 
 @Article{watlet2018imaging,
   author    = {Watlet, Arnaud and Kaufmann, Olivier and Triantafyllou, Antoine and Poulain, Ama{\"e}l and Chambers, Jonathan E and Meldrum, Philip I and Wilkinson, Paul B and Hallet, Vincent and Quinif, Yves and Van Ruymbeke, Michel and others},
-  title     = {Imaging groundwater infiltration dynamics in the karst vadose zone with long-term ERT monitoring},
   journal   = {Hydrology and Earth System Sciences},
+  title     = {Imaging groundwater infiltration dynamics in the karst vadose zone with long-term ERT monitoring},
   year      = {2018},
-  volume    = {22},
   number    = {2},
   pages     = {1563--1592},
+  volume    = {22},
+  doi       = {10.5194/hess-22-1563-2018},
   publisher = {European Geosciences Union},
 }
 
 @Article{rochlitz2019custem,
   author    = {Rochlitz, Raphael and Skibbe, Nico and G{\"u}nther, Thomas},
-  title     = {custEM: Customizable finite-element simulation of complex controlled-source electromagnetic data},
   journal   = {Geophysics},
+  title     = {custEM: Customizable finite-element simulation of complex controlled-source electromagnetic data},
   year      = {2019},
-  volume    = {84},
   number    = {2},
   pages     = {F17--F33},
+  volume    = {84},
+  doi       = {10.1190/geo2018-0208.1},
   publisher = {Society of Exploration Geophysicists},
 }
 
 @Article{jordi2018geostatistical,
   author    = {Jordi, C and Doetsch, J and G{\"u}nther, T and Schmelzbach, C and Robertsson, J OA},
-  title     = {Geostatistical regularization operators for geophysical inverse problems on irregular meshes},
   journal   = {Geophysical Journal International},
+  title     = {Geostatistical regularization operators for geophysical inverse problems on irregular meshes},
   year      = {2018},
-  volume    = {213},
   number    = {2},
   pages     = {1374--1386},
+  volume    = {213},
+  doi       = {10.1093/gji/ggy055},
   publisher = {Oxford University Press},
 }
 
 @Article{rossi2018data,
   author    = {Rossi, Matteo and Dahlin, Tbrleif and Olsson, Per-Ivar and G{\"u}nther, Thomas},
-  title     = {Data acquisition, processing and filtering for reliable 3D resistivity and time-domain induced polarisation tomography in an urban area: field example of Vinsta, Stockholm},
   journal   = {Near Surface Geophysics},
+  title     = {Data acquisition, processing and filtering for reliable 3D resistivity and time-domain induced polarisation tomography in an urban area: field example of Vinsta, Stockholm},
   year      = {2018},
-  volume    = {16},
   number    = {3},
   pages     = {220--229},
+  volume    = {16},
+  doi       = {10.3997/1873-0604.2018014},
   publisher = {European Association of Geoscientists \& Engineers},
 }
 
 @Article{ronczka2018geophysical,
   author    = {Ronczka, Mathias and Wis{\'e}n, Roger and Dahlin, Tbrleif},
-  title     = {Geophysical pre-investigation for a Stockholm tunnel project: joint inversion and interpretation of geoelectric and seismic refraction data in an urban environment},
   journal   = {Near Surface Geophysics},
+  title     = {Geophysical pre-investigation for a Stockholm tunnel project: joint inversion and interpretation of geoelectric and seismic refraction data in an urban environment},
   year      = {2018},
-  volume    = {16},
   number    = {3},
   pages     = {258--268},
+  volume    = {16},
+  doi       = {10.3997/1873-0604.2018009},
   publisher = {European Association of Geoscientists \& Engineers},
 }
 
 @Article{skibbe2018structurally,
   author    = {Skibbe, Nico and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
-  title     = {Structurally coupled cooperative inversion of magnetic resonance with resistivity soundings},
   journal   = {Geophysics},
+  title     = {Structurally coupled cooperative inversion of magnetic resonance with resistivity soundings},
   year      = {2018},
-  volume    = {83},
   number    = {6},
   pages     = {JM51--JM63},
+  volume    = {83},
+  doi       = {10.1190/geo2018-0046.1},
   publisher = {Society of Exploration Geophysicists and American Association of Petroleum~…},
 }
 
 @Article{wunderlich2018constraining,
   author    = {Wunderlich, Tina and Fischer, Peter and Wilken, Dennis and Hadler, Hanna and Erkul, Ercan and Mecking, Rebekka and G{\"u}nther, Thomas and Heinzelmann, Michael and V{\"o}tt, Andreas and Rabbel, Wolfgang},
-  title     = {Constraining electric resistivity tomography by direct push electric conductivity logs and vibracores: An exemplary study of the Fiume Morto silted riverbed (Ostia Antica, western Italy)},
   journal   = {Geophysics},
+  title     = {Constraining electric resistivity tomography by direct push electric conductivity logs and vibracores: An exemplary study of the Fiume Morto silted riverbed (Ostia Antica, western Italy)},
   year      = {2018},
-  volume    = {83},
   number    = {3},
   pages     = {B87--B103},
+  volume    = {83},
+  doi       = {10.1190/geo2016-0660.1},
   publisher = {Society of Exploration Geophysicists},
 }
 
 @Article{borner2017effect,
   author    = {B{\"o}rner, Frank and M{\"u}llerHuber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
-  title     = {The effect of compaction on complex electrical resistivity of shaly sands},
   journal   = {Near Surface Geophysics},
+  title     = {The effect of compaction on complex electrical resistivity of shaly sands},
   year      = {2017},
-  volume    = {15},
   number    = {6},
   pages     = {633--643},
+  volume    = {15},
+  doi       = {10.3997/1873-0604.2017056},
   publisher = {European Association of Geoscientists \& Engineers},
 }
 
 @Article{ochs2020considerations,
   author    = {Ochs, Johanna and Klitzsch, Norbert},
-  title     = {Considerations regarding small-scale surface and borehole-to-surface electrical resistivity tomography},
   journal   = {Journal of Applied Geophysics},
+  title     = {Considerations regarding small-scale surface and borehole-to-surface electrical resistivity tomography},
   year      = {2020},
-  volume    = {172},
   pages     = {103862},
+  volume    = {172},
+  doi       = {10.1016/j.jappgeo.2019.103862},
   publisher = {Elsevier},
 }
 
@@ -386,40 +396,44 @@
 
 @Article{de2019joint,
   author    = {de Pasquale, Giulia and Linde, N and Greenwood, A},
-  title     = {Joint probabilistic inversion of DC resistivity and seismic refraction data applied to bedrock/regolith interface delineation},
   journal   = {Journal of Applied Geophysics},
+  title     = {Joint probabilistic inversion of DC resistivity and seismic refraction data applied to bedrock/regolith interface delineation},
   year      = {2019},
-  volume    = {170},
   pages     = {103839},
+  volume    = {170},
+  doi       = {10.1016/j.jappgeo.2019.103839},
   publisher = {Elsevier},
 }
 
 @Article{whiteley2020landslide,
   author    = {Whiteley, JS and Chambers, JE and Uhlemann, S and Boyd, J and Cimpoiasu, MO and Holmes, JL and Inauen, CM and Watlet, A and Hawley-Sibbett, LR and Sujitapan, C and others},
-  title     = {Landslide monitoring using seismic refraction tomography--The importance of incorporating topographic variations},
   journal   = {Engineering Geology},
+  title     = {Landslide monitoring using seismic refraction tomography--The importance of incorporating topographic variations},
   year      = {2020},
   pages     = {105525},
+  doi       = {10.1016/j.enggeo.2020.105525},
   publisher = {Elsevier},
 }
 
 @Article{clement2020frequency,
   author    = {Cl{\'e}ment, R{\'e}mi and P{\"a}rn, Jaan and Maddison, Martin and Henine, Hocine and Chaumont, C{\'e}dric and Tournebize, Julien and Uri, Veiko and Espenberg, Mikk and G{\"u}nther, Thomas and Mander, {\"U}lo},
-  title     = {Frequency-domain electromagnetic induction for upscaling greenhouse gas fluxes in two hemiboreal drained peatland forests},
   journal   = {Journal of Applied Geophysics},
+  title     = {Frequency-domain electromagnetic induction for upscaling greenhouse gas fluxes in two hemiboreal drained peatland forests},
   year      = {2020},
   pages     = {103944},
+  doi       = {10.1016/j.jappgeo.2020.103944},
   publisher = {Elsevier},
 }
 
 @Article{nickschick2019large,
   author    = {Nickschick, Tobias and Flechsig, Christina and Mrlina, Jan and Oppermann, Frank and L{\"o}big, Felix and G{\"u}nther, Thomas},
-  title     = {Large-scale electrical resistivity tomography in the Cheb Basin (Eger Rift) at an International Continental Drilling Program (ICDP) monitoring site to image fluid-related structures},
   journal   = {Solid Earth},
+  title     = {Large-scale electrical resistivity tomography in the Cheb Basin (Eger Rift) at an International Continental Drilling Program (ICDP) monitoring site to image fluid-related structures},
   year      = {2019},
-  volume    = {10},
   number    = {6},
   pages     = {1951--1969},
+  volume    = {10},
+  doi       = {10.5194/se-10-1951-2019},
   publisher = {Copernicus GmbH},
 }
 
@@ -434,12 +448,13 @@
 
 @Article{assouline2019machine,
   author    = {Assouline, Dan and Mohajeri, Nahid and Gudmundsson, Agust and Scartezzini, Jean-Louis},
-  title     = {A machine learning approach for mapping the very shallow theoretical geothermal potential},
   journal   = {Geothermal Energy},
+  title     = {A machine learning approach for mapping the very shallow theoretical geothermal potential},
   year      = {2019},
-  volume    = {7},
   number    = {1},
   pages     = {19},
+  volume    = {7},
+  doi       = {10.1186/s40517-019-0135-6},
   publisher = {Springer},
 }
 
