Make database work offline (Ajax -> Javascript) and style tuning

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -439,11 +439,12 @@
 
 @Article{leger2019distributed,
   author  = {L{\'e}ger, Emmanuel and Dafflon, Baptiste and Robert, Yves},
-  title   = {A distributed temperature profiling method for assessing spatial variability in ground},
   journal = {The Cryosphere},
+  title   = {A distributed temperature profiling method for assessing spatial variability in ground},
   year    = {2019},
-  volume  = {13},
   pages   = {11},
+  volume  = {13},
+  doi     = {10.5194/tc-13-2853-2019},
 }
 
 @Article{assouline2019machine,
