--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{CostabelGue2014VZJ,
-  author    = {S. Costabel and T. G{\"u}nther},
+  author    = {Costabel, S. and G{\"u}nther, T.},
   title     = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
   journal   = {Vadose Zone Journal},
   year      = {2014},
@@ -14,7 +14,7 @@
 }
 
 @Article{GuentherMue2012HESS,
-  author    = {G\"unther, T. and M\"uller-Petke, M.},
+  author    = {G{\"u}nther, T. and M{\"u}ller-Petke, M.},
   title     = {{H}ydraulic properties at the {N}orth {S}ea island of {B}orkum derived from joint inversion of magnetic resonance and electrical resistivity soundings},
   journal   = {Hydrology and Earth System Sciences},
   year      = {2012},
@@ -27,7 +27,7 @@
 }
 
 @Article{LoewerIgeWag2016,
-  author    = {M. Loewer and J. Igel and N. Wagner},
+  author    = {Loewer, M. and Igel, J. and Wagner, N.},
   title     = {{S}pectral {D}ecomposition of {S}oil {E}lectrical and {D}ielectric {L}osses and {P}rediction of {I}n {S}itu {GPR} {P}erformance},
   journal   = {{IEEE} J. Sel. Top. Appl. Earth Observations Remote Sensing},
   year      = {2016},
@@ -61,7 +61,7 @@
 }
 
 @Article{CosciaGreLin+2010,
-  author    = {I. Coscia and S. Greenhalgh and N. Linde and J. Doetsch and L. Marescot and T. G{\"u}nther and A. Green},
+  author    = {Coscia,I.  and Greenhalgh, S. and Linde, N. and Doetsch, J. and Marescot, L. and G{\"u}nther, T. and Green, A.},
   title     = {3{D} crosshole apparent resistivity static inversion and monitoring of a coupled river-aquifer system},
   journal   = {Geophysics},
   year      = {2011},
@@ -74,7 +74,7 @@
 }
 
 @Article{CostabelGueDluMue2016,
-  author    = {S. Costabel and T. Günther and R. Dlugosch and M. Müller-Petke},
+  author    = {Costabel, S. and G{\"u}nther, T. and Dlugosch, R. and M{\"u}ller-Petke, M.},
   title     = {{T}orus-nuclear magnetic resonance: {Q}uasicontinuous airborne magnetic resonance profiling by using a helium-filled balloon},
   journal   = {GEOPHYSICS},
   year      = {2016},
@@ -91,7 +91,7 @@
 }
 
 @Article{WagnerGueSchMau2015GEO,
-  author    = {Wagner, F. and Günther, T. and Schmidt-Hattenberger, C. and Maurer, H.},
+  author    = {Wagner, F. and G{\"u}nther, T. and Schmidt-Hattenberger, C. and Maurer, H.},
   title     = {{C}onstructive optimization of electrode locations for target-focused resistivity monitoring},
   journal   = {Geophysics},
   year      = {2015},
@@ -104,7 +104,7 @@
 }
 
 @InProceedings{GuentherRuecker2006SAGEEP-Joint,
-  author    = {T. G{\"u}nther and C. R{\"u}cker},
+  author    = {G{\"u}nther, T. and R{\"u}cker, C.},
   title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
   booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006; Seattle, USA.},
   year      = {2006},
@@ -116,7 +116,7 @@
 }
 
 @InProceedings{GuentherDluHolYar2010SAGEEP,
-  author    = {T. Günther and R. Dlugosch and R. Holland and U. Yaramanci},
+  author    = {G{\"u}nther, T. and Dlugosch, R. and Holland, R. and Yaramanci, U.},
   title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
   booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
   year      = {2010},
@@ -129,7 +129,7 @@
 }
 
 @Article{guenther2016JoAG,
-  author    = {T. G{\"u}nther and T. Martin},
+  author    = {G{\"u}nther, T. and Martin, T.},
   title     = {{S}pectral two-dimensional inversion of frequency-domain induced polarisation data from a mining slag heap},
   journal   = {Journal of Applied Geophysics},
   year      = {2016},
@@ -142,7 +142,7 @@
 }
 
 @Article{Hupfer2016,
-  author    = {S. Hupfer and T. Martin and A. Weller and T. G\"{u}nther and K. Kuhn and V. Djotsa Nguimeya Ngninjio and U. Noell},
+  author    = {Hupfer, S. and Martin, T. and Weller, A. and G\"{u}nther, T. and Kuhn, K. and Ngninjio, V.D.N. and Noell, U.},
   title     = {{P}olarization effects of unconsolidated sulphide-sand-mixtures},
   journal   = {Journal of Applied Geophysics},
   year      = {2016},
@@ -156,7 +156,7 @@
 }
 
 @Article{loewer2017GJI,
-  author    = {M. Loewer and T. G\"{u}nther and J. Igel and S. Kruschwitz and T. Martin and N. Wagner},
+  author    = {Loewer, M. and G\"{u}nther, T. and Igel, J. and Kruschwitz, S. and Martin, T. and Wagner, N.},
   title     = {Ultra-broad-band electrical spectroscopy of soils and sediments{\textemdash}a combined permittivity and conductivity model},
   journal   = {Geophysical Journal International},
   year      = {2017},
@@ -172,7 +172,7 @@
 }
 
 @Article{ronczka2017SE,
-  author    = {M. Ronczka and K. Hellman and T. G\"{u}nther and R. Wis{\'{e}}n and T. Dahlin},
+  author    = {Ronczka, M. and Hellman, K. and G\"{u}nther, T. and Wis{\'{e}}n, R. and Dahlin, T.},
   title     = {Electric resistivity and seismic refraction tomography: a challenging joint underwater survey at \"{A}sp\"{o} Hard Rock Laboratory},
   journal   = {Solid Earth},
   year      = {2017},
@@ -188,7 +188,7 @@
 }
 
 @Article{hellman2017JoAG,
-  author    = {K. Hellman and M. Ronczka and T. G\"{u}nther and M. Wennermark and C. R\"{u}cker and T. Dahlin},
+  author    = {Hellman, K. and Ronczka, M. and G\"{u}nther, T. and Wennermark, M. and R\"{u}cker, C. and Dahlin, T.},
   title     = {Structurally coupled inversion of {ERT} and refraction seismic data combined with cluster-based model integration},
   journal   = {Journal of Applied Geophysics},
   year      = {2017},
@@ -254,7 +254,7 @@
 }
 
 @Article{Wagner2019,
-  author  = {Wagner, F. and Mollaret, C. and G\"{u}nther, T. and Kemna, A. and Hauck, C.},
+  author  = {Wagner, F. and Mollaret, C. and G{\"u}nther, T. and Kemna, A. and Hauck, C.},
   title   = {Quantitative imaging of water, ice, and air in permafrost systems through petrophysical joint inversion of seismic refraction and electrical resistivity data},
   journal = {Geophysical Journal International},
   year    = {2019},
@@ -265,7 +265,7 @@
 }
 
 @Article{watlet2018imaging,
-  author    = {Watlet, Arnaud and Kaufmann, Olivier and Triantafyllou, Antoine and Poulain, Ama{\"e}l and Chambers, Jonathan E and Meldrum, Philip I and Wilkinson, Paul B and Hallet, Vincent and Quinif, Yves and Van Ruymbeke, Michel and others},
+  author    = {Watlet, A. and Kaufmann, O. and Triantafyllou, A. and Poulain, Am. and Chambers, J. and Meldrum, P. and Wilkinson, P. and Hallet, V. and Quinif, Y. and van~Ruymbeke, M. and van~Camp, M.},
   journal   = {Hydrology and Earth System Sciences},
   title     = {Imaging groundwater infiltration dynamics in the karst vadose zone with long-term ERT monitoring},
   year      = {2018},
@@ -277,7 +277,7 @@
 }
 
 @Article{rochlitz2019custem,
-  author    = {Rochlitz, Raphael and Skibbe, Nico and G{\"u}nther, Thomas},
+  author    = {Rochlitz, R. and Skibbe, N. and G{\"u}nther, T.},
   journal   = {Geophysics},
   title     = {custEM: Customizable finite-element simulation of complex controlled-source electromagnetic data},
   year      = {2019},
@@ -289,7 +289,7 @@
 }
 
 @Article{jordi2018geostatistical,
-  author    = {Jordi, C and Doetsch, J and G{\"u}nther, T and Schmelzbach, C and Robertsson, J OA},
+  author    = {Jordi, C. and Doetsch, J. and G{\"u}nther, T. and Schmelzbach, C. and Robertsson, J. O.A.},
   journal   = {Geophysical Journal International},
   title     = {Geostatistical regularization operators for geophysical inverse problems on irregular meshes},
   year      = {2018},
@@ -301,7 +301,7 @@
 }
 
 @Article{rossi2018data,
-  author    = {Rossi, Matteo and Dahlin, Tbrleif and Olsson, Per-Ivar and G{\"u}nther, Thomas},
+  author    = {Rossi, M. and Dahlin, T. and Olsson, P.-I. and G{\"u}nther, T.},
   journal   = {Near Surface Geophysics},
   title     = {Data acquisition, processing and filtering for reliable 3D resistivity and time-domain induced polarisation tomography in an urban area: field example of Vinsta, Stockholm},
   year      = {2018},
@@ -313,7 +313,7 @@
 }
 
 @Article{ronczka2018geophysical,
-  author    = {Ronczka, Mathias and Wis{\'e}n, Roger and Dahlin, Tbrleif},
+  author    = {Ronczka, M. and Wis{\'e}n, R. and Dahlin, T.},
   journal   = {Near Surface Geophysics},
   title     = {Geophysical pre-investigation for a Stockholm tunnel project: joint inversion and interpretation of geoelectric and seismic refraction data in an urban environment},
   year      = {2018},
@@ -325,7 +325,7 @@
 }
 
 @Article{skibbe2018structurally,
-  author    = {Skibbe, Nico and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
+  author    = {Skibbe, N. and G{\"u}nther, T. and M{\"u}ller-Petke, M.},
   journal   = {Geophysics},
   title     = {Structurally coupled cooperative inversion of magnetic resonance with resistivity soundings},
   year      = {2018},
@@ -337,7 +337,7 @@
 }
 
 @Article{wunderlich2018constraining,
-  author    = {Wunderlich, Tina and Fischer, Peter and Wilken, Dennis and Hadler, Hanna and Erkul, Ercan and Mecking, Rebekka and G{\"u}nther, Thomas and Heinzelmann, Michael and V{\"o}tt, Andreas and Rabbel, Wolfgang},
+  author    = {Wunderlich, T. and Fischer, P. and Wilken, D. and Hadler, H. and Erkul, E. and Mecking, R. and G{\"u}nther, T. and Heinzelmann, M. and V{\"o}tt, A. and Rabbel, W.},
   journal   = {Geophysics},
   title     = {Constraining electric resistivity tomography by direct push electric conductivity logs and vibracores: An exemplary study of the Fiume Morto silted riverbed (Ostia Antica, western Italy)},
   year      = {2018},
@@ -349,7 +349,7 @@
 }
 
 @Article{borner2017effect,
-  author    = {B{\"o}rner, Frank and M{\"u}llerHuber, Edith and Branka, Daniel and R{\"u}cker, Carsten},
+  author    = {B{\"o}rner, F. and M{\"u}ller-Huber, E. and Branka, D. and R{\"u}cker, C.},
   journal   = {Near Surface Geophysics},
   title     = {The effect of compaction on complex electrical resistivity of shaly sands},
   year      = {2017},
@@ -361,7 +361,7 @@
 }
 
 @Article{ochs2020considerations,
-  author    = {Ochs, Johanna and Klitzsch, Norbert},
+  author    = {Ochs, J. and Klitzsch, N.},
   journal   = {Journal of Applied Geophysics},
   title     = {Considerations regarding small-scale surface and borehole-to-surface electrical resistivity tomography},
   year      = {2020},
@@ -372,7 +372,7 @@
 }
 
 @Article{skibbe2020,
-  author  = {Skibbe, Nico and Rochlitz, Raphael and G{\"u}nther, Thomas and M{\"u}ller-Petke, Mike},
+  author  = {Skibbe, N. and Rochlitz, R. and G{\"u}nther, T. and M{\"u}ller-Petke, M.},
   title   = {COMET: An open-source toolbox for Surface NMR},
   journal = {Geophysics},
   year    = {2020},
@@ -383,7 +383,7 @@
 }
 
 @Article{jordi2020structural,
-  author    = {Jordi, Claudio and Doetsch, Joseph and G{\"u}nther, T and Schmelzbach, C{\'e}dric and Maurer, Hansruedi and Robertsson, Johan OA},
+  author    = {Jordi, C. and Doetsch, J. and G{\"u}nther, T. and Schmelzbach, C. and Maurer, H. and Robertsson, J. O.A.},
   title     = {Structural joint inversion on irregular meshes},
   journal   = {Geophysical Journal International},
   year      = {2020},
@@ -395,7 +395,7 @@
 }
 
 @Article{de2019joint,
-  author    = {de Pasquale, Giulia and Linde, N and Greenwood, A},
+  author    = {de~Pasquale, G. and Linde, N. and Greenwood, A.},
   journal   = {Journal of Applied Geophysics},
   title     = {Joint probabilistic inversion of DC resistivity and seismic refraction data applied to bedrock/regolith interface delineation},
   year      = {2019},
@@ -406,7 +406,7 @@
 }
 
 @Article{whiteley2020landslide,
-  author    = {Whiteley, JS and Chambers, JE and Uhlemann, S and Boyd, J and Cimpoiasu, MO and Holmes, JL and Inauen, CM and Watlet, A and Hawley-Sibbett, LR and Sujitapan, C and others},
+  author    = {Whiteley, J.S. and Chambers, J.E. and Uhlemann, S. and Boyd, J. and Cimpoiasu, M.O. and Holmes, J.L. and Inauen, C.M. and Watlet, A. and Hawley-Sibbett, L.R. and Sujitapan, C. and others},
   journal   = {Engineering Geology},
   title     = {Landslide monitoring using seismic refraction tomography--The importance of incorporating topographic variations},
   year      = {2020},
@@ -416,7 +416,7 @@
 }
 
 @Article{clement2020frequency,
-  author    = {Cl{\'e}ment, R{\'e}mi and P{\"a}rn, Jaan and Maddison, Martin and Henine, Hocine and Chaumont, C{\'e}dric and Tournebize, Julien and Uri, Veiko and Espenberg, Mikk and G{\"u}nther, Thomas and Mander, {\"U}lo},
+  author    = {Cl{\'e}ment, R. and P{\"a}rn, J. and Maddison, M. and Henine, H. and Chaumont, C. and Tournebize, J. and Uri, V. and Espenberg, M. and G{\"u}nther, T. and Mander, {\"U}.},
   journal   = {Journal of Applied Geophysics},
   title     = {Frequency-domain electromagnetic induction for upscaling greenhouse gas fluxes in two hemiboreal drained peatland forests},
   year      = {2020},
@@ -426,7 +426,7 @@
 }
 
 @Article{nickschick2019large,
-  author    = {Nickschick, Tobias and Flechsig, Christina and Mrlina, Jan and Oppermann, Frank and L{\"o}big, Felix and G{\"u}nther, Thomas},
+  author    = {Nickschick, T. and Flechsig, C. and Mrlina, J. and Oppermann, F.k and L{\"o}big, F. and G{\"u}nther, T.},
   journal   = {Solid Earth},
   title     = {Large-scale electrical resistivity tomography in the Cheb Basin (Eger Rift) at an International Continental Drilling Program (ICDP) monitoring site to image fluid-related structures},
   year      = {2019},
@@ -438,7 +438,7 @@
 }
 
 @Article{leger2019distributed,
-  author  = {L{\'e}ger, Emmanuel and Dafflon, Baptiste and Robert, Yves},
+  author  = {L{\'e}ger, E. and Dafflon, B. and Robert, Y.},
   journal = {The Cryosphere},
   title   = {A distributed temperature profiling method for assessing spatial variability in ground},
   year    = {2019},
@@ -448,7 +448,7 @@
 }
 
 @Article{assouline2019machine,
-  author    = {Assouline, Dan and Mohajeri, Nahid and Gudmundsson, Agust and Scartezzini, Jean-Louis},
+  author    = {Assouline, D. and Mohajeri, N. and Gudmundsson, A. and Scartezzini, J.-L.},
   journal   = {Geothermal Energy},
   title     = {A machine learning approach for mapping the very shallow theoretical geothermal potential},
   year      = {2019},
@@ -460,7 +460,7 @@
 }
 
 @Article{pub.1121196731,
-  author  = {Lopez-Alvis, Jorge and Hermans, Thomas and Nguyen, Frédéric},
+  author  = {Lopez-Alvis, J. and Hermans, T. and Nguyen, F.},
   title   = {A cross-validation framework to extract data features for reducing structural uncertainty in subsurface heterogeneity},
   journal = {Advances in Water Resources},
   year    = {2019},
@@ -482,7 +482,7 @@
 }
 
 @Article{Klingler2020,
-  author  = {Stefan Klingler and Carsten Leven and Olaf A. Cirpka and Peter Dietrich},
+  author  = {Klingler, S: and Leven, C. and Cirpka, O.A. and Dietrich, P.},
   title   = {Anomaly effect-driven optimization of direct-current geoelectric mapping surveys in large areas},
   journal = {Journal of Applied Geophysics},
   year    = {2020},
@@ -492,7 +492,7 @@
 }
 
 @Article{Fediuk2020,
-  author         = {Fediuk, Annika and Wilken, Dennis and Wunderlich, Tina and Rabbel, Wolfgang},
+  author         = {Fediuk, A. and Wilken, D. and Wunderlich, T. and Rabbel, W.},
   title          = {Physical Parameters and Contrasts of Wooden Objects in Lacustrine Environment: Ground Penetrating Radar and Geoelectrics},
   journal        = {Geosciences},
   year           = {2020},
@@ -504,7 +504,7 @@
 }
 
 @Article{Peruzzo2020,
-  author  = {Luca Peruzzo and Chunwei Chou and Yuxin Wu and Myriam Schmutz and Benjamin Mary and Florian M. Wagner and Petr Petrov and Gregory Newman and Elison B. Blancaflor and Xiuwei Liu and Xuefeng Ma and Susan Hubbard},
+  author  = {Peruzzo, L. and Chou, C. and Wu, Y. and Schmutz, M. and Mary, B. and Wagner, F.M. and Petrov, P. and Newman, G. and Blancaflor, E.B. and Liu, X. and Ma, X. and Hubbard, S.},
   title   = {Imaging of plant current pathways for non-invasive root Phenotyping using a newly developed electrical current source density approach},
   journal = {Plant and Soil},
   year    = {2020},
@@ -512,7 +512,7 @@
 }
 
 @Article{Blazevic2020,
-  author         = {Blazevic, Lara A. and Bodet, Ludovic and Pasquet, Sylvain and Linde, Niklas and Jougnot, Damien and Longuevergne, Laurent},
+  author         = {Blazevic, L. A. and Bodet, L. and Pasquet, S. and Linde, N. and Jougnot, D. and Longuevergne, L.},
   title          = {Time-Lapse Seismic and Electrical Monitoring of the Vadose Zone during A Controlled Infiltration Experiment at the Ploemeur Hydrological Observatory, France},
   journal        = {Water},
   year           = {2020},
