--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -91,7 +91,7 @@
 }
 
 @Article{WagnerGueSchMau2015GEO,
-  author    = {Wagner, F. and G{\"u}nther, T. and Schmidt-Hattenberger, C. and Maurer, H.},
+  author    = {Wagner, F.M. and G{\"u}nther, T. and Schmidt-Hattenberger, C. and Maurer, H.},
   title     = {{C}onstructive optimization of electrode locations for target-focused resistivity monitoring},
   journal   = {Geophysics},
   year      = {2015},
@@ -218,7 +218,7 @@
 }
 
 @Article{Wagner2018,
-  author    = {Wagner, F. M. and Wiese, B.},
+  author    = {Wagner, F.M. and Wiese, B.},
   title     = {Fully coupled inversion on a multi-physical reservoir model - Part II: The Ketzin CO2 storage reservoir},
   journal   = {International Journal of Greenhouse Gas Control},
   year      = {2018},
@@ -231,7 +231,7 @@
 }
 
 @Article{Wiese2018,
-  author    = {Wiese, B. and Wagner, F. and Norden, B. and Maurer, H. and Schmidt-Hattenberger, C.},
+  author    = {Wiese, B. and Wagner, F.M. and Norden, B. and Maurer, H. and Schmidt-Hattenberger, C.},
   title     = {Fully coupled inversion on a multi-physical reservoir model - Part I: Theory and concept},
   journal   = {International Journal of Greenhouse Gas Control},
   year      = {2018},
@@ -244,7 +244,7 @@
 }
 
 @Article{Steiner2019,
-  author  = {Steiner, M. and Wagner, F. M. and Flores Orozco, A.},
+  author  = {Steiner, M. and Wagner, F.M. and Flores Orozco, A.},
   title   = {Improved characterization of alpine permafrost through structurally constrained inversion of refraction seismic data},
   journal = {The Cryosphere Discussions},
   year    = {2019},
@@ -254,7 +254,7 @@
 }
 
 @Article{Wagner2019,
-  author  = {Wagner, F. and Mollaret, C. and G{\"u}nther, T. and Kemna, A. and Hauck, C.},
+  author  = {Wagner, F.M. and Mollaret, C. and G{\"u}nther, T. and Kemna, A. and Hauck, C.},
   title   = {Quantitative imaging of water, ice, and air in permafrost systems through petrophysical joint inversion of seismic refraction and electrical resistivity data},
   journal = {Geophysical Journal International},
   year    = {2019},
