Consistent Journal name

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -76,7 +76,7 @@
 @Article{CostabelGueDluMue2016,
   author    = {Costabel, S. and G{\"u}nther, T. and Dlugosch, R. and M{\"u}ller-Petke, M.},
   title     = {{T}orus-nuclear magnetic resonance: {Q}uasicontinuous airborne magnetic resonance profiling by using a helium-filled balloon},
-  journal   = {GEOPHYSICS},
+  journal   = {Geophysics},
   year      = {2016},
   volume    = {81},
   number    = {4},
