update Palacios paper
replace Palacios et al. (2019) preprint (HESSD discussion paper) by full paper (Palacios et al. 2020) in HESS

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -470,15 +470,18 @@
   url     = {https://app.dimensions.ai/details/publication/pub.1121196731},
 }
 
-@Article{hess-2019-408,
-  author  = {Palacios, A. and Ledo, J. J. and Linde, N. and Luquot, L. and Bellmunt, F. and Folch, A. and Marcuello, A. and Queralt, P. and Pezard, P. A. and Mart\'{\i}nez, L. and Bosch, D. and Carrera, J.},
-  title   = {Time-lapse cross-hole electrical resistivity tomography (CHERT) for monitoring seawater intrusion dynamics in a Mediterranean aquifer},
-  journal = {Hydrology and Earth System Sciences Discussions},
-  year    = {2019},
-  volume  = {2019},
-  pages   = {1--30},
-  doi     = {10.5194/hess-2019-408},
-  url     = {https://www.hydrol-earth-syst-sci-discuss.net/hess-2019-408/},
+@article{Palacios2020,
+  doi = {10.5194/hess-24-2121-2020},
+  url = {https://doi.org/10.5194/hess-24-2121-2020},
+  year = {2020},
+  month = apr,
+  publisher = {Copernicus {GmbH}},
+  volume = {24},
+  number = {4},
+  pages = {2121--2139},
+  author = {Andrea Palacios and Juan Jos{\'{e}} Ledo and Niklas Linde and Linda Luquot and Fabian Bellmunt and Albert Folch and Alex Marcuello and Pilar Queralt and Philippe A. Pezard and Laura Mart{\'{\i}}nez and Laura del Val and David Bosch and Jes{\'{u}}s Carrera},
+  title = {Time-lapse cross-hole electrical resistivity tomography ({CHERT}) for monitoring seawater intrusion dynamics in a Mediterranean aquifer},
+  journal = {Hydrology and Earth System Sciences}
 }
 
 @Article{Klingler2020,
