Add de Pasquale GJI (2019)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -524,4 +524,13 @@
   doi            = {10.3390/w12051230},
 }
 
+@Article{dePasquale2019,
+  author  = {de~Pasquale, G. and Linde, N. and Doetsch, J. and Holbrook, W.S.},
+  journal = {Geophysical Journal International},
+  title   = {Probabilistic inference of subsurface heterogeneity and interface geometry using geophysical data},
+  year    = {2019},
+  doi     = {10.1093/gji/ggz055},
+  url     = {https://doi.org/10.1093/gji/ggz055},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
