Installation renamed to build instructions

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -470,7 +470,7 @@
   url     = {https://app.dimensions.ai/details/publication/pub.1121196731},
 }
 
-@article{Palacios2020,
+@Article{Palacios2020,
   doi = {10.5194/hess-24-2121-2020},
   url = {https://doi.org/10.5194/hess-24-2121-2020},
   year = {2020},
