Fix link to API and search.

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -483,7 +483,7 @@
 }
 
 @Article{Klingler2020,
-  author  = {Klingler, S: and Leven, C. and Cirpka, O.A. and Dietrich, P.},
+  author  = {Klingler, S. and Leven, C. and Cirpka, O.A. and Dietrich, P.},
   title   = {Anomaly effect-driven optimization of direct-current geoelectric mapping surveys in large areas},
   journal = {Journal of Applied Geophysics},
   year    = {2020},
