add geostatistics examples (not fully ready yet)

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -320,4 +320,18 @@
   timestamp = {2013.09.17},
 }
 
+@Article{jordi2018geostatistical,
+  author    = {Jordi, C. and Doetsch, J. and G{\"u}nther, T. and Schmelzbach, C. and Robertsson, J. O.A.},
+  journal   = {Geophysical Journal International},
+  title     = {Geostatistical regularization operators for geophysical inverse problems on irregular meshes},
+  year      = {2018},
+  number    = {2},
+  pages     = {1374--1386},
+  volume    = {213},
+  doi       = {10.1093/gji/ggy055},
+  publisher = {Oxford University Press},
+}
+
+
+
 @Comment{jabref-meta: databaseType:bibtex;}
