add Miller et al. (2020) to gimliuses.bib

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -533,4 +533,15 @@
   url     = {https://doi.org/10.1093/gji/ggz055},
 }
 
+@article{Miller2020JVGR,
+title = "Snapshot of a magmatic/hydrothermal system from electrical resistivity tomography and fumarolic composition, Whakaari/White Island, New Zealand",
+journal = "Journal of Volcanology and Geothermal Research",
+pages = "106909",
+year = "2020",
+issn = "0377-0273",
+doi = "https://doi.org/10.1016/j.jvolgeores.2020.106909",
+url = "http://www.sciencedirect.com/science/article/pii/S0377027320301529",
+author = "Craig A. Miller and Bruce W. Christenson and Svetlana Byrdina and Jean Vandemeulebrouck and Thomas Brakenrig and Karen Britten and Jackson Shanks and Gabe Epstein"
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
