Add Folch et al. (2020), JoH

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -544,4 +544,16 @@ url = "http://www.sciencedirect.com/science/article/pii/S0377027320301529",
 author = "Craig A. Miller and Bruce W. Christenson and Svetlana Byrdina and Jean Vandemeulebrouck and Thomas Brakenrig and Karen Britten and Jackson Shanks and Gabe Epstein"
 }
 
+@Article{Folch2020,
+  author   = {A. Folch and L. [del Val] and L. Luquot and L. Martínez-Pérez and F. Bellmunt and H. [Le Lay] and V. Rodellas and N. Ferrer and A. Palacios and S. Fernández and M.A. Marazuela and M. Diego-Feliu and M. Pool and T. Goyetche and J. Ledo and P. Pezard and O. Bour and P. Queralt and A. Marcuello and J. Garcia-Orellana and M.W. Saaltink and E. Vázquez-Suñé and J. Carrera},
+  journal  = {Journal of Hydrology},
+  title    = {{Combining fiber optic DTS, cross-hole ERT and time-lapse induction logging to characterize and monitor a coastal aquifer}},
+  year     = {2020},
+  pages    = {125050},
+  volume   = {588},
+  doi      = {10.1016/j.jhydrol.2020.125050},
+  keywords = {Cross hole electrical resistivity tomography, Fiber optic distributed temperature sensing, Formation electrical conductivity, Sea water intrusion, Submarine groundwater discharge, Alluvial aquifer},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0022169420305102},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
