Reformat authors in updated/overwritten Palacios et al. ...

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -471,15 +471,15 @@
 }
 
 @Article{Palacios2020,
-  doi = {10.5194/hess-24-2121-2020},
-  url = {https://doi.org/10.5194/hess-24-2121-2020},
-  year = {2020},
-  volume = {24},
-  number = {4},
-  pages = {2121--2139},
-  author = {Andrea Palacios and Juan Jos{\'{e}} Ledo and Niklas Linde and Linda Luquot and Fabian Bellmunt and Albert Folch and Alex Marcuello and Pilar Queralt and Philippe A. Pezard and Laura Mart{\'{\i}}nez and Laura del Val and David Bosch and Jes{\'{u}}s Carrera},
-  title = {Time-lapse cross-hole electrical resistivity tomography ({CHERT}) for monitoring seawater intrusion dynamics in a Mediterranean aquifer},
-  journal = {Hydrology and Earth System Sciences}
+  author  = {Palacios, A. and Ledo, J. J. and Linde, N. and Luquot, L. and Bellmunt, F. and Folch, A. and Marcuello, A. and Queralt, P. and Pezard, P. A. and Mart\'{\i}nez, L. and Bosch, D. and Carrera, J.},
+  journal = {Hydrology and Earth System Sciences},
+  title   = {Time-lapse cross-hole electrical resistivity tomography ({CHERT}) for monitoring seawater intrusion dynamics in a Mediterranean aquifer},
+  year    = {2020},
+  number  = {4},
+  pages   = {2121--2139},
+  volume  = {24},
+  doi     = {10.5194/hess-24-2121-2020},
+  url     = {https://doi.org/10.5194/hess-24-2121-2020},
 }
 
 @Article{Klingler2020,
@@ -545,7 +545,7 @@ author = "Craig A. Miller and Bruce W. Christenson and Svetlana Byrdina and Jean
 }
 
 @Article{Folch2020,
-  author   = {A. Folch and L. [del Val] and L. Luquot and L. Martínez-Pérez and F. Bellmunt and H. [Le Lay] and V. Rodellas and N. Ferrer and A. Palacios and S. Fernández and M.A. Marazuela and M. Diego-Feliu and M. Pool and T. Goyetche and J. Ledo and P. Pezard and O. Bour and P. Queralt and A. Marcuello and J. Garcia-Orellana and M.W. Saaltink and E. Vázquez-Suñé and J. Carrera},
+  author   = {Folch, A. and del Val, L. and Luquot, L. and Martínez-Pérez, L. and Bellmunt, F. and Le Lay, H. and Rodellas, V. and Ferrer, N. and Palacios, A. and Fernández, S. and Marazuela, M.A. and Diego-Feliu, M. and Pool, M. and Goyetche, T. and Ledo, J. and Pezard, P. and Bour, O. and Queralt, P. and Marcuello, A. and Garcia-Orellana, J. and Saaltink, M.W. and Vázquez-Suñé, E. and Carrera, J.},
   journal  = {Journal of Hydrology},
   title    = {{Combining fiber optic DTS, cross-hole ERT and time-lapse induction logging to characterize and monitor a coastal aquifer}},
   year     = {2020},
