Add Costall et al. (2020), SREP

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -519,4 +519,14 @@
   keywords = {Cross hole electrical resistivity tomography, Fiber optic distributed temperature sensing, Formation electrical conductivity, Sea water intrusion, Submarine groundwater discharge, Alluvial aquifer},
 }
 
+@Article{Costall2020,
+  author  = {Costall, A. and Harris, B. and Teo, B. and Schaa, R. and Wagner, F. M. and Pigois, J.-P.},
+  journal = {Scientific Reports},
+  title   = {Groundwater Throughflow and Seawater Intrusion in High Quality Coastal Aquifers},
+  year    = {2020},
+  pages   = {9866},
+  volume  = {10},
+  doi     = {10.1038/s41598-020-66516-6},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
