Add Martin et al. (2020) and Ronczka et al. (2020)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -529,4 +529,29 @@
   doi     = {10.1038/s41598-020-66516-6},
 }
 
+@Article{Martin2020,
+  author    = {Tina Martin and Thomas Günther and Adrian Flores Orozco and Torleif Dahlin},
+  journal   = {Journal of Applied Geophysics},
+  title     = {Evaluation of spectral induced polarization field measurements in time and frequency domain},
+  year      = {2020},
+  month     = {sep},
+  pages     = {104141},
+  volume    = {180},
+  doi       = {10.1016/j.jappgeo.2020.104141},
+  publisher = {Elsevier {BV}},
+}
+
+@Article{Ronczka2020,
+  author    = {Mathias Ronczka and Thomas Günther and Michael Grinat and Helga Wiederhold},
+  journal   = {Near Surface Geophysics},
+  title     = {Monitoring freshwater-saltwater interfaces with {SAMOS} - installation effects on data and inversion},
+  year      = {2020},
+  month     = {jul},
+  number    = {4},
+  pages     = {369--383},
+  volume    = {18},
+  doi       = {10.1002/nsg.12115},
+  publisher = {Wiley},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
