--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -505,7 +505,7 @@
   year    = {2020},
   issn    = {0377-0273},
   pages   = {106909},
-  doi     = {https://doi.org/10.1016/j.jvolgeores.2020.106909},
+  doi     = {10.1016/j.jvolgeores.2020.106909},
 }
 
 @Article{Folch2020,
@@ -552,6 +552,25 @@
   volume    = {18},
   doi       = {10.1002/nsg.12115},
   publisher = {Wiley},
+}
+
+@Article{Rao2020,
+  author  = {Rao, S. and Lesparre, N. and Flores Orozco, A. and Wagner, F. and Javaux, M.},
+  journal = {Plant and Soil},
+  title   = {Imaging plant responses to water deficit using electrical resistivity tomography},
+  year    = {2020},
+  doi     = {10.1007/s11104-020-04653-7},
+}
+
+@Article{Mollaret2020,
+  author  = {Mollaret, C. and Wagner, F. and Hilbich, C. and Scapozza, C. and Hauck, C.},
+  journal = {Front. Earth Sci.},
+  title   = {Petrophysical joint inversion applied to alpine permafrost field sites to image subsurface ice, water, air and rock contents},
+  year    = {2020},
+  pages   = {85},
+  volume  = {8},
+  doi     = {10.3389/feart.2020.00085},
+  url     = {https://www.frontiersin.org/articles/10.3389/feart.2020.00085/pdf},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
