Add Raab et al. (2020)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -573,4 +573,15 @@
   url     = {https://www.frontiersin.org/articles/10.3389/feart.2020.00085/pdf},
 }
 
+@Article{Raab2020,
+  author  = {Raab, T. and Weinzierl, W. and Wiese, B. and Rippe, D. and Schmidt-Hattenberger, C.},
+  journal = {Advances in Geosciences},
+  title   = {{Development of an Electrical Resistivity Tomography Monitoring Concept for the Svelvik CO2 Field Lab, Norway}},
+  year    = {2020},
+  pages   = {41--53},
+  volume  = {54},
+  doi     = {10.5194/adgeo-54-41-2020},
+  url     = {https://adgeo.copernicus.org/articles/54/41/2020/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
