Add Enemark et al. (2020) to usecases and carousel

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -584,4 +584,16 @@
   url     = {https://adgeo.copernicus.org/articles/54/41/2020/},
 }
 
+@Article{Enemark2020,
+  author  = {Enemark, Trine and Peeters, Luk and Mallants, Dirk and Flinchum, Brady and Batelaan, Okke},
+  journal = {Water Resources Research},
+  title   = {A Systematic Approach to Hydrogeological Conceptual Model Testing, Combining Remote Sensing and Geophysical Data},
+  year    = {2020},
+  number  = {8},
+  pages   = {e2020WR027578},
+  volume  = {56},
+  doi     = {10.1029/2020WR027578},
+  url     = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020WR027578},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
