Add FernandezVisentini et al. (2020)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -585,7 +585,7 @@
 }
 
 @Article{Enemark2020,
-  author  = {Enemark, Trine and Peeters, Luk and Mallants, Dirk and Flinchum, Brady and Batelaan, Okke},
+  author  = {Enemark, Tr. and Peeters, L. and Mallants, D. and Flinchum, B. and Batelaan, O.},
   journal = {Water Resources Research},
   title   = {A Systematic Approach to Hydrogeological Conceptual Model Testing, Combining Remote Sensing and Geophysical Data},
   year    = {2020},
@@ -594,6 +594,17 @@
   volume  = {56},
   doi     = {10.1029/2020WR027578},
   url     = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020WR027578},
+}
+
+@Article{FernandezVisentini2020,
+  author  = {{Fernandez Visentini}, A. and Linde, N. and {Le Borgne}, T. and Dentz, M.},
+  journal = {Advances in Water Resources},
+  title   = {Inferring geostatistical properties of hydraulic conductivity fields from saline tracer tests and equivalent electrical conductivity time-series},
+  year    = {2020},
+  pages   = {103758},
+  volume  = {146},
+  doi     = {10.1016/j.advwatres.2020.103758},
+  url     = {http://www.sciencedirect.com/science/article/pii/S0309170820306618},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
