--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -585,7 +585,7 @@
 }
 
 @Article{Enemark2020,
-  author  = {Enemark, Tr. and Peeters, L. and Mallants, D. and Flinchum, B. and Batelaan, O.},
+  author  = {Enemark, T. and Peeters, L. and Mallants, D. and Flinchum, B. and Batelaan, O.},
   journal = {Water Resources Research},
   title   = {A Systematic Approach to Hydrogeological Conceptual Model Testing, Combining Remote Sensing and Geophysical Data},
   year    = {2020},
