Style correction for consistency @halbmy

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -530,7 +530,7 @@
 }
 
 @Article{Martin2020,
-  author    = {Tina Martin and Thomas Günther and Adrian Flores Orozco and Torleif Dahlin},
+  author    = {Martin, T. and Günther, T. and Flores Orozco, A. and Dahlin, T.},
   journal   = {Journal of Applied Geophysics},
   title     = {Evaluation of spectral induced polarization field measurements in time and frequency domain},
   year      = {2020},
@@ -542,7 +542,7 @@
 }
 
 @Article{Ronczka2020,
-  author    = {Mathias Ronczka and Thomas Günther and Michael Grinat and Helga Wiederhold},
+  author    = {Ronczka, M. and Günther, T. and Grinat, M. and Wiederhold, H.},
   journal   = {Near Surface Geophysics},
   title     = {Monitoring freshwater-saltwater interfaces with {SAMOS} - installation effects on data and inversion},
   year      = {2020},
