Add Pacheco et al. (2020) to database

--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -28,4 +28,45 @@ EAGE workshop on Open-source software in Geosciences, EAGE, Vienna.
   url       = {https://nbn-resolving.de/urn:nbn:de:bsz:15-qucosa-69066},
 }
 
+@InProceedings{Guenther2006,
+  author    = {G{\"u}nther, T. and R{\"u}cker, C.},
+  booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006; Seattle, USA.},
+  title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
+  year      = {2006},
+  doi       = {10.4133/1.2923578},
+  timestamp = {2015.12.21},
+}
+
+@InProceedings{Guenther2010,
+  author    = {G{\"u}nther, T. and Dlugosch, R. and Holland, R. and Yaramanci, U.},
+  booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
+  title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
+  year      = {2010},
+  pages     = {302-307},
+  volume    = {23},
+  doi       = {10.4133/1.3445447},
+  timestamp = {2016.09.14},
+}
+
+@InProceedings{Wagner2020,
+  author    = {Wagner, F. and R\"{u}cker, C. and G\"{u}nther, T. and Dinsel, F. and Skibbe, N. and Weigand, M. and Hase, J.},
+  booktitle = {EGU General Assembly 2020, Online Meeting},
+  title     = {Open-source hydrogeophysical modeling and inversion with pyGIMLi 1.1: Recent advances and examples in research and education},
+  year      = {2020},
+  note      = {invited},
+  doi       = {10.5194/egusphere-egu2020-18751},
+}
+
+@InProceedings{agu1,
+  author    = {Wagner, F. and R\"{u}cker, C. and G\"{u}nther, T.},
+  title     = {Reproducible hydrogeophysical inversions through the open-source library pyGIMLi},
+  booktitle = {AGU Fall Meeting, New Orleans, 11-15 Dec 2017, Open-Source Software in the Geosciences (NS41B-0016)},
+  year      = {2017},
+  note      = {invited},
+  doi       = {10.5281/zenodo.1095621},
+  owner     = {fwagner},
+  timestamp = {2017.12.19},
+  url       = {https://agu17.pygimli.org},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
