--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -1,25 +1,5 @@
 % Encoding: UTF-8
 
-@InProceedings{Guenther2006,
-  author    = {G{\"u}nther, T. and R{\"u}cker, C.},
-  booktitle = {Ext. Abstract, 19. EEGS annual meeting (SAGEEP), 02.-06.04.2006; Seattle, USA.},
-  title     = {{A} new joint inversion approach applied to the combined tomography of dc resistivity and seismic refraction data.},
-  year      = {2006},
-  doi       = {10.4133/1.2923578},
-  timestamp = {2015.12.21},
-}
-
-@InProceedings{Guenther2010,
-  author    = {G{\"u}nther, T. and Dlugosch, R. and Holland, R. and Yaramanci, U.},
-  booktitle = {Ext. Abstract, 23. EEGS annual meeting (SAGEEP), April 11-14, 2010; Keystone, CO.},
-  title     = {{A}quifer characterization using coupled inversion of {MRS} \& {DC}/{IP} data on a hydrogeophysical test-site},
-  year      = {2010},
-  pages     = {302-307},
-  volume    = {23},
-  doi       = {10.4133/1.3445447},
-  timestamp = {2016.09.14},
-}
-
 @Article{Coscia2011,
   author    = {Coscia,I. and Greenhalgh, S. and Linde, N. and Doetsch, J. and Marescot, L. and G{\"u}nther, T. and Green, A.},
   journal   = {Geophysics},
@@ -66,14 +46,6 @@
   volume    = {80},
   doi       = {10.1190/geo2014-0214.1},
   timestamp = {2015.01.14},
-}
-
-@InProceedings{Ullmann2015,
-  author    = {Ullmann, A. and Wiederhold, H. and Günther, T. and Siemon, B.},
-  booktitle = {Ext. Abstr., Near Surface Geoscience 2015, Turin, Italy},
-  title     = {{H}ydrogeophysics at the {E}lbe-{W}eser estuary prior to groundwater modelling},
-  year      = {2015},
-  timestamp = {2016.09.14},
 }
 
 @Article{Loewer2016,
@@ -605,6 +577,17 @@
   volume  = {146},
   doi     = {10.1016/j.advwatres.2020.103758},
   url     = {http://www.sciencedirect.com/science/article/pii/S0309170820306618},
+}
+
+@Article{Pacheco2020,
+  author  = {Pacheco, M. and Plattner, A. M. and Stock, G. M. and Rood, D. H. and Pluhar, C. J.},
+  journal = {Frontiers in Earth Science},
+  title   = {Surface Exposure Dating and Geophysical Tomography of the Royal Arches Meadow Rock Avalanche, Yosemite Valley, California},
+  year    = {2020},
+  pages   = {372},
+  volume  = {8},
+  doi     = {10.3389/feart.2020.00372},
+  url     = {https://www.frontiersin.org/article/10.3389/feart.2020.00372},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
