--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -590,11 +590,13 @@
   url     = {https://www.frontiersin.org/article/10.3389/feart.2020.00372},
 }
 
-@Article{Saneiyan2020,
+@Article{Saneiyan2021,
   author  = {Saneiyan, S. and Ntarlagiannis, D. and Colwell, F.},
   journal = {Geophysical Journal International},
   title   = {Complex conductivity signatures of microbial induced calcite precipitation, field and laboratory scales},
-  year    = {2020},
+  year    = {2021},
+  pages   = {1811--1824},
+  volume  = {224},
   doi     = {10.1093/gji/ggaa510},
   url     = {https://doi.org/10.1093/gji/ggaa510},
 }
