Add Flinchum et al. and Urruela et al. to gimliuses.bib

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -601,4 +601,26 @@
   url     = {https://doi.org/10.1093/gji/ggaa510},
 }
 
+@Article{Urruela2020,
+  author  = {Urruela, A. and Rivero, L. and Casas, A. and Garcia-Artigas, R. and Sendr\'{o}s, A. and Lovera, R. and Himi, M.},
+  journal = {Journal of Applied Geophysics},
+  title   = {Improving the resolution of investigation using {ERT} instruments with a reduced number of electrodes},
+  year    = {2020},
+  pages   = {104239},
+  doi     = {10.1016/j.jappgeo.2020.104239},
+  url     = {http://www.sciencedirect.com/science/article/pii/S0926985120306224},
+}
+
+@Article{Flinchum2020,
+  author  = {Flinchum, B. A. and Banks, E. and Hatch, M. and Batelaan, O. and Peeters, L. J. M. and Pasquet, S.},
+  journal = {Hydrology and Earth System Sciences},
+  title   = {Identifying recharge under subtle ephemeral features in a flat-lying semi-arid region using a combined geophysical approach},
+  year    = {2020},
+  number  = {9},
+  pages   = {4353--4368},
+  volume  = {24},
+  doi     = {10.5194/hess-24-4353-2020},
+  url     = {https://hess.copernicus.org/articles/24/4353/2020/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
