Add Kordjazi et al. (2021) to gimliuses.bib

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -623,4 +623,14 @@
   url     = {https://hess.copernicus.org/articles/24/4353/2020/},
 }
 
+@Article{Kordjazi2021,
+  author  = {Kordjazi, A. and Coe, J. T. and Afanasiev, M.},
+  journal = {Journal of Nondestructive Evaluation},
+  title   = {Nondestructive Evaluation of Drilled Shaft Construction Anomalies Using Full Waveform Tomography of Simulated Crosshole Measurements},
+  year    = {2021},
+  number  = {3},
+  volume  = {40},
+  doi     = {10.1007/s10921-020-00728-8},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
