Add Bücker et al. (2021) to gimliuses.bib

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -633,4 +633,16 @@
   doi     = {10.1007/s10921-020-00728-8},
 }
 
+@Article{Buecker2021,
+  author  = {B\"ucker, M. and Flores Orozco, A. and Gallistl, J. and Steiner, M. and Aigner, L. and Hoppenbrock, J. and Glebe, R. and Morales Barrera, W. and Pita de la Paz, C. and Garc\'{\i}a Garc\'{\i}a, C. E. and Razo P\'erez, J. A. and Buckel, J. and H\"ordt, A. and Schwalb, A. and P\'erez, L.},
+  journal = {Solid Earth},
+  title   = {Integrated land and water-borne geophysical surveys shed light on the sudden drying of large karst lakes in southern Mexico},
+  year    = {2021},
+  number  = {2},
+  pages   = {439-461},
+  volume  = {12},
+  doi     = {10.5194/se-12-439-2021},
+  url     = {https://se.copernicus.org/articles/12/439/2021/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
