Add Skibbe and Steiner et al. (2021), Geophysics, SI Hydrogeophysics

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -268,15 +268,6 @@
   publisher = {Society of Exploration Geophysicists},
 }
 
-@Article{Steiner2019,
-  author  = {Steiner, M. and Wagner, F.M. and Flores Orozco, A.},
-  title   = {Improved characterization of alpine permafrost through structurally constrained inversion of refraction seismic data},
-  journal = {The Cryosphere Discussions},
-  year    = {2019},
-  pages   = {1--27},
-  doi     = {10.5194/tc-2019-52},
-}
-
 @Article{Wagner2019,
   author  = {Wagner, F.M. and Mollaret, C. and G{\"u}nther, T. and Kemna, A. and Hauck, C.},
   title   = {Quantitative imaging of water, ice, and air in permafrost systems through petrophysical joint inversion of seismic refraction and electrical resistivity data},
@@ -643,6 +634,22 @@
   volume  = {12},
   doi     = {10.5194/se-12-439-2021},
   url     = {https://se.copernicus.org/articles/12/439/2021/},
+}
+
+@Article{Steiner2021,
+  author  = {Steiner, M. and Wagner, F. M. and Maierhofer, T. and Sch\"oner, W. Flores Orozco, A.},
+  journal = {Geophysics},
+  title   = {Improved estimation of ice and water contents in Alpine permafrost through constrained petrophysical joint inversion: {The Hoher Sonnblick} case study},
+  year    = {2021},
+  doi     = {10.1190/geo2020-0592.1},
+}
+
+@Article{Skibbe2021,
+  author  = {Skibbe, N. and G\"unther, T. and M\"uller-Petke, M.},
+  journal = {Geophysics},
+  title   = {Improved hydrogeophysical imaging by structural coupling of two-dimensional magnetic resonance and electrical resistivity tomography},
+  year    = {2021},
+  doi     = {10.1190/geo2020-0593.1},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
