--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -652,4 +652,55 @@
   doi     = {10.1190/geo2020-0593.1},
 }
 
+@Article{Bievre2021,
+  author  = {Bi\`evre, G. and Jongmans, D. and Lebourg, T. and Carri\`ere, S.},
+  journal = {Near Surface Geophysics},
+  title   = {{Electrical resistivity monitoring of an earthslide with electrodes located outside the unstable zone (Pont-Bourquin landslide, Swiss Alps)}},
+  year    = {2021},
+  note    = {Special Issue: Near-surface geophysics for geohazard assessment},
+  pages   = {225--239},
+  volume  = {19},
+  doi     = {10.1002/nsg.12145},
+ }
+
+@Article{Norooz2021,
+  doi = {10.1016/j.jappgeo.2021.104355},
+  url = {https://doi.org/10.1016/j.jappgeo.2021.104355},
+  year = {2021},
+  publisher = {Elsevier {BV}},
+  volume = {191},
+  pages = {104355},
+  author = {Reyhaneh Norooz and Per-Ivar Olsson and Torleif Dahlin and Thomas G\"{u}nther and Christian Bernstone},
+  title = {A geoelectrical pre-study of \"{A}lvkarleby test embankment dam: 3D forward modelling and effects of structural constraints on the 3D inversion model of zoned embankment dams},
+  journal = {Journal of Applied Geophysics}
+}
+
+@article{Flinchum2021,
+  doi = {10.1190/geo2020-0614.1},
+  url = {https://doi.org/10.1190/geo2020-0614.1},
+  year = {2021},
+  month = sep,
+  publisher = {Society of Exploration Geophysicists},
+  volume = {86},
+  number = {5},
+  pages = {WB207--WB226},
+  author = {Brady Flinchum and Luk Peeters and Tim Munday and Kevin Cahill},
+  title = {Improving the hydrogeologic conceptualization of a remote semiarid palaeovalley groundwater system using airborne electromagnetics,  seismic refraction and reflection,  and downhole nuclear magnetic resonance},
+  journal = {{GEOPHYSICS}}
+}
+
+@article{Sabor2021,
+  doi = {10.1093/gji/ggab023},
+  url = {https://doi.org/10.1093/gji/ggab023},
+  year = {2021},
+  month = jan,
+  publisher = {Oxford University Press ({OUP})},
+  volume = {225},
+  number = {2},
+  pages = {1304--1318},
+  author = {Kawtar Sabor and Damien Jougnot and Roger Guerin and Barth{\'{e}}l{\'{e}}my Steck and Jean-Marie Henault and Louis Apffel and Denis Vautrin},
+  title = {A data mining approach for improved interpretation of {ERT} inverted sections using the {DBSCAN} clustering algorithm},
+  journal = {Geophysical Journal International}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
