fix missing comma

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -686,7 +686,7 @@
 
 @Article{Martin2021,
   author = {Tina Martin and Thomas G\"{u}nther and Andreas Weller and Kerstin Kuhn},
-  journal = {Journal of Applied Geophysics}
+  journal = {Journal of Applied Geophysics},
   title = {Classification of slag material by spectral induced polarization laboratory and field measurements},
   year = {2021},
   doi = {10.1016/j.jappgeo.2021.104439},
