abbreviate first names

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -661,7 +661,7 @@
  }
 
 @Article{Norooz2021,
-  author = {Reyhaneh Norooz and Per-Ivar Olsson and Torleif Dahlin and Thomas G\"{u}nther and Christian Bernstone},
+  author = {Norooz, R. and Olsson, P.-I. and Dahlin, T. and G\"{u}nther, T. and Bernstone, C.},
   journal = {Journal of Applied Geophysics},
   title = {A geoelectrical pre-study of \"{A}lvkarleby test embankment dam: 3D forward modelling and effects of structural constraints on the 3D inversion model of zoned embankment dams},
   year = {2021},
@@ -669,7 +669,7 @@
 }
 
 @Article{Flinchum2021,
-  author = {Brady Flinchum and Luk Peeters and Tim Munday and Kevin Cahill},
+  author = {Flinchum, B. and Peeters, L. and Munday, T. and Cahill, K.},
   journal = {{GEOPHYSICS}},
   title = {Improving the hydrogeologic conceptualization of a remote semiarid palaeovalley groundwater system using airborne electromagnetics,  seismic refraction and reflection,  and downhole nuclear magnetic resonance},
   year = {2021},
@@ -677,7 +677,7 @@
 }
 
 @Article{Sabor2021,
-  author = {Kawtar Sabor and Damien Jougnot and Roger Guerin and Barth{\'{e}}l{\'{e}}my Steck and Jean-Marie Henault and Louis Apffel and Denis Vautrin},
+  author = {Sabor, K. and Jougnot, D. and Guerin, R. and Steck, B. and Henault, J.-M. and Apffel, L. and Vautrin, D.},
   journal = {Geophysical Journal International},
   title = {A data mining approach for improved interpretation of {ERT} inverted sections using the {DBSCAN} clustering algorithm},
   year = {2021},
@@ -685,7 +685,7 @@
 }
 
 @Article{Martin2021,
-  author = {Tina Martin and Thomas G\"{u}nther and Andreas Weller and Kerstin Kuhn},
+  author = {Martin, T. and G\"{u}nther, T. and Weller, A. and Kuhn, K.},
   journal = {Journal of Applied Geophysics},
   title = {Classification of slag material by spectral induced polarization laboratory and field measurements},
   year = {2021},
