--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -275,7 +275,7 @@
   year    = {2019},
   volume  = {219},
   number  = {3},
-  pages   = {1866–1875},
+  pages   = {1866--1875},
   doi     = {10.1093/gji/ggz402},
 }
 
@@ -436,7 +436,7 @@
   year           = {2020},
   volume         = {10},
   number         = {4},
-  issn           = {2076-3263},
+  issn           = {2076--3263},
   article-number = {146},
   doi            = {10.3390/geosciences10040146},
 }
@@ -456,7 +456,7 @@
   year           = {2020},
   volume         = {12},
   number         = {5},
-  issn           = {2073-4441},
+  issn           = {2073--4441},
   article-number = {1230},
   doi            = {10.3390/w12051230},
 }
@@ -758,7 +758,7 @@
     title = {Electrical Signatures of Diffusion-Limited Mixing: Insights from a Milli-fluidic Tracer Experiment},
     journal = {Transport in Porous Media},
     year = {2021},
-    month = may,
+    month = {may},
     publisher = {Springer Science and Business Media {LLC}},
     doi = {10.1007/s11242-021-01607-0},
     url = {https://doi.org/10.1007/s11242-021-01607-0},
@@ -772,7 +772,7 @@
     year  = {2021},
     volume = {0},
     number = {0},
-    pages = {1-21},
+    pages = {1--21},
     publisher = {Taylor & Francis},
     doi = {10.1080/17499518.2021.1971252},
     url = {https://doi.org/10.1080/17499518.2021.1971252},
@@ -782,7 +782,7 @@
     author = {Jiang, L. and Wang, B. and Tian, G. and He, X. and Zou, A. and Guo, X. and  Chen, H. and El-Raouf, A. A.},
     title = {Strategy for Optimization of Arbitrary Electrode Distribution for 3D Electrical Resistivity Tomography in Urban Zones},
     year = {2021},
-    month = aug,
+    month = {aug},
     publisher = {Springer Science and Business Media {LLC}},
     volume = {178},
     number = {9},
@@ -807,7 +807,7 @@
     author = {Bi{\`{e}}vre, G and Jongmans, D. and Lebourg, T. and Carri{\`{e}}re, S.},
     title = {Electrical resistivity monitoring of an earthslide with electrodes located outside the unstable zone (Pont-Bourquin landslide,  Swiss Alps)},
     journal = {Near Surface Geophysics},
-    month = apr,
+    month = {apr},
     publisher = {Wiley},
     volume = {19},
     number = {2},
