Add missing year for Bièvre et al. (#348)

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -808,6 +808,7 @@
     title = {Electrical resistivity monitoring of an earthslide with electrodes located outside the unstable zone (Pont-Bourquin landslide,  Swiss Alps)},
     journal = {Near Surface Geophysics},
     month = {apr},
+    year = {2021},
     publisher = {Wiley},
     volume = {19},
     number = {2},
