--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -63,7 +63,7 @@
 
 @InProceedings{Igel2016,
   author    = {Igel, J. and Stadler, S. and Günther, T.},
-  booktitle = {Ext. Abstr., SAGEEP, Denver, USA},
+  journal   = {Ext. Abstr., SAGEEP, Denver, USA},
   title     = {{H}igh-resolution investigation of the capillary transition zone and its influence on {GPR} signatures},
   year      = {2016},
   doi       = {10.1109/icgpr.2016.7572603},
