fix missing journal

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -779,6 +779,7 @@
 @Article{Jiang2021,
     author = {Jiang, L. and Wang, B. and Tian, G. and He, X. and Zou, A. and Guo, X. and  Chen, H. and El-Raouf, A. A.},
     title = {Strategy for Optimization of Arbitrary Electrode Distribution for 3D Electrical Resistivity Tomography in Urban Zones},
+    journal = {Pure and Applied Geophysics},
     year = {2021},
     publisher = {Springer Science and Business Media {LLC}},
     volume = {178},
