--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -754,7 +754,7 @@
     url = {https://doi.org/10.1080/17499518.2021.1971252},
 }
 
-@Article{Jiang2021,
+@Article{Jiang2021b,
     author = {Jiang, L. and Wang, B. and Tian, G. and He, X. and Zou, A. and Guo, X. and  Chen, H. and El-Raouf, A. A.},
     title = {Strategy for Optimization of Arbitrary Electrode Distribution for 3D Electrical Resistivity Tomography in Urban Zones},
     journal = {Pure and Applied Geophysics},
