Add Flinchum et al. (2022) to Carousel and Database

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -614,6 +614,17 @@
   url     = {https://hess.copernicus.org/articles/24/4353/2020/},
 }
 
+@article{Flinchum2022,
+  doi = {10.3389/frwa.2021.772185},
+  url = {https://doi.org/10.3389/frwa.2021.772185},
+  year = {2022},
+  publisher = {Frontiers Media {SA}},
+  volume = {3},
+  author = {Flinchum, B. A. and Holbrook, W. S. and Carr, B. J.},
+  title = {What Do P-Wave Velocities Tell Us About the Critical Zone?},
+  journal = {Frontiers in Water}
+}
+
 @Article{Kordjazi2021,
   author  = {Kordjazi, A. and Coe, J. T. and Afanasiev, M.},
   journal = {Journal of Nondestructive Evaluation},
