Add new studies to gimliuses and paper carousel

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -801,4 +801,57 @@
     pages = {225--239},
     doi = {10.1002/nsg.12145},
 }
+
+@Article{Wellmann2022,
+  doi     = {10.1130/GES02455.1},
+  year = {2022},
+  publisher = {Geological Society of America},
+  author  = {Wellmann, F. and Virgo, S. and Escallon, D. and de la Varga, M. and J\"{u}stel, A. and Wagner, F. and Kowalski, J. and Zhao, H. and Fehling, R. and Chen, Q.},
+  title   = {{Open AR-Sandbox}: A haptic interface for geoscience education and outreach},
+  journal = {Geosphere}
+}
+
+@Article{Ochs2021,
+    author = {Ochs, J. and Klitzsch, N. and Wagner, F. M.},
+    doi = {10.1016/j.jappgeo.2022.104530},
+    year = {2022},
+    publisher = {Elsevier {BV}},
+    volume = {197},
+    pages = {104530},
+    journal = {Journal of Applied Geophysics},
+    title = {Mitigation of installation-related effects for small-scale borehole-to-surface ERT},
+}
+
+@Article{Guedes2022,
+  doi = {10.1016/j.cageo.2021.105020},
+  year = {2022},
+  publisher = {Elsevier {BV}},
+  volume = {159},
+  pages = {105020},
+  author = {Jos{\'{e}}, V. and Guedes C. B. and Maciel, A. and Rocha, M. P.},
+  title = {Refrapy: A Python program for seismic refraction data analysis},
+  journal = {Computers {\&} Geosciences}
+}
+
+@Article{Doyoro2022,
+  doi = {10.1186/s40562-022-00214-1},
+  year = {2022},
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {9},
+  number = {1},
+  author = {Doyoro, Y. G. and Chang, P.-Y. and Puntu, J. M. and Lin, D.-L. and Huu, T. V. and Rahmalia, D. A. and Shie, M.-S.},
+  title = {A review of open software resources in python for electrical resistivity modelling},
+  journal = {Geoscience Letters}
+}
+
+@Article{ArboledaZapata2022,
+  doi = {10.1016/j.jappgeo.2021.104512},
+  year = {2022},
+  publisher = {Elsevier {BV}},
+  volume = {196},
+  pages = {104512},
+  author = {Arboleda-Zapata, M. and Guillemoteau, J. and Tronicke, J.},
+  title = {A comprehensive workflow to analyze ensembles of globally inverted 2D electrical resistivity models},
+  journal = {Journal of Applied Geophysics}
+}
 @Comment{jabref-meta: databaseType:bibtex;}
